# acwf-verification-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
0-preliminary-do-not-run/: 1-create-aiida-archive-from-cifs.py  2-get-uuids-csv.py  3-export_structure_group.sh  check_lattice_const_strct.py  create_central_volume_table.py  create_set2_from_set1.py  read_volumes.py  set2-lattice-constant.txt  upload-test-structure.py
1-preliminary/: README.md  acwf-verification_oxides-verification-LDA-v1_structures.aiida  acwf-verification_oxides-verification-PBE-missing-actinides-v1_structures.aiida  acwf-verification_oxides-verification-PBE-v1_structures.aiida  acwf-verification_oxides-verification-PBEsol-v1_structures.aiida  acwf-verification_unaries-set2_structures.aiida  acwf-verification_unaries-verification-PBE-missing-actinides-v1_structures.aiida  acwf-verification_unaries-verification-PBE-v1_structures.aiida  acwf-verification_unaries-verification-r2SCAN01-v1_structures.aiida  acwf-verification_unaries-verification-r2SCAN01-wo-f-block-noble-v1_structures.aiida  commonwf-oxides_set2_structures.aiida  commonwf-oxides_unaries-set1_structures.aiida  create_starting_subgroup.py  create_starting_subgroup_monoelemental.py  oxides-verification-LDA-v1_structures_uuids.csv  oxides-verification-PBE-missing-actinides-v1_structures_uuids.csv  oxides-verification-PBE-v1_structures_uuids.csv  oxides-verification-PBEsol-v1_structures_uuids.csv  set2_structures_uuids.csv  unaries-set1_structures_uuids.csv  unaries-verification-PBE-actinides-v1_structures_uuids.csv  (+4 more)
(+6069 files in other folders)
